cmake_minimum_required(VERSION 3.29 FATAL_ERROR)

project(leetcode-cpp CXX)

find_package(Catch2 3 REQUIRED)

enable_testing()

include(cmake/functions.cmake)

# Включаем C++20 во всём проекте
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Экспортируем команды для использования с VSCode C++ IntelliSense
# См. https://stackoverflow.com/questions/54671883/how-can-i-set-up-c-c-intellisense-for-a-cmake-project-in-vs-code
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(01_two_sum)
add_subdirectory(06_zigzag_convertion)
add_subdirectory(11_container_with_most_water)
add_subdirectory(12_integer_to_roman)
add_subdirectory(13_roman_to_integer)
add_subdirectory(14_longest_common_prefix)
add_subdirectory(15_3sum)
add_subdirectory(20_valid_parentheses)
add_subdirectory(26_remove_duplicates)
add_subdirectory(27_remove_element)
add_subdirectory(28_find_index)
add_subdirectory(42_trapping_rain_water)
add_subdirectory(45_jump_game_2)
add_subdirectory(49_group_anagrams)
add_subdirectory(55_jump_game)
add_subdirectory(56_merge_intervals)
add_subdirectory(57_insert_interval)
add_subdirectory(58_length_of_last_word)
add_subdirectory(68_text_justification)
add_subdirectory(71_simplify_path)
add_subdirectory(80_remove_duplicates)
add_subdirectory(88_merge_sorted_array)
add_subdirectory(121_best_time_to_buy_and_sell)
add_subdirectory(122_best_time_to_buy_and_sell_v2)
add_subdirectory(125_valid_palindrome)
add_subdirectory(128_longest_consecutive3)
add_subdirectory(134_gas_station)
add_subdirectory(135_candy)
add_subdirectory(141_linked_list_cycle)
add_subdirectory(150_reverse_polish)
add_subdirectory(151_reverse_words)
add_subdirectory(155_min_stack)
add_subdirectory(167_two_sum_2)
add_subdirectory(169_majority_element)
add_subdirectory(189_rotate_array)
add_subdirectory(202_happy_number)
add_subdirectory(205_isomorphic_strings)
add_subdirectory(209_min_size_subarray)
add_subdirectory(219_contains_duplicate)
add_subdirectory(224_basic_calculator)
add_subdirectory(228_summary_ranges)
add_subdirectory(238_product_except_self)
add_subdirectory(242_valid_anagram)
add_subdirectory(274_h_index)
add_subdirectory(290_word_pattern)
add_subdirectory(380_insert_delete_getrandom)
add_subdirectory(383_ransom_note)
add_subdirectory(392_is_subsequence)
add_subdirectory(452_burst_baloons)
